# scrapy-selenium

./: setup.cfg  setup.py
requirements/: requirements.txt
scrapy_selenium/: middlewares.py
