[metadata]
name = scrapy-selenium
version = 0.0.8
url = https://github.com/mark5280/scrapy-selenium
licence = Forked from the original
description = Forked so I can make use of https://github.com/ultrafunkamsterdam/undetected-chromedriver
long_description = file:README.md

[options]
include_package_data = true

[pep8]
max-line-length = 100
